Revert "fix footer overflow"
This reverts commit 027c1791d8790e007da2c8a046baa251e8270ca6.

--- a/internal/web/src/input.css
+++ b/internal/web/src/input.css
@@ -175,7 +175,3 @@ tbody tr td {
 .info ul {
     @apply list-disc list-inside;
 }
-
-.container:last-child {
-    margin-bottom: 2.5rem !important;
-}
